{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 81,
  "lineage": "668d70d5-d9d0-d81c-97eb-cbce1ab28d14",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:internet-gateway/igw-0ce06f248ac41e0e4",
            "id": "igw-0ce06f248ac41e0e4",
            "owner_id": "247625421810",
            "region": "eu-west-3",
            "tags": {
              "Name": "public-gw",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "public-gw",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "vpc_id": "vpc-0a69937743873a980"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb",
      "name": "cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:247625421810:loadbalancer/net/controlplane-lb/0de22b2ef91ec63a",
            "arn_suffix": "net/controlplane-lb/0de22b2ef91ec63a",
            "dns_name": "controlplane-lb-0de22b2ef91ec63a.elb.eu-west-3.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:247625421810:loadbalancer/net/controlplane-lb/0de22b2ef91ec63a",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "controlplane-lb",
            "region": "eu-west-3",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "security_groups": [
              "sg-03768d4486d2bbdd2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0285e5f8c75a7f4c1"
              },
              {
                "subnet_id": "subnet-0d09632f37e74923c"
              },
              {
                "subnet_id": "subnet-0fbb670f83cad8170"
              }
            ],
            "subnets": [
              "subnet-0285e5f8c75a7f4c1",
              "subnet-0d09632f37e74923c",
              "subnet-0fbb670f83cad8170"
            ],
            "tags": {
              "Name": "controlplane-lb",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "controlplane-lb",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "vpc_id": "vpc-0a69937743873a980",
            "zone_id": "Z1CMS0P5QUZ6D5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:247625421810:loadbalancer/net/controlplane-lb/0de22b2ef91ec63a"
          },
          "dependencies": [
            "module.networking.aws_security_group.lb",
            "module.networking.aws_subnet.cp",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_provision_zones": "enabled",
            "auto_scaling_ips": "enabled",
            "availability_mode": "regional",
            "connectivity_type": "public",
            "id": "nat-1e331121dd4186c4f",
            "region": "eu-west-3",
            "regional_nat_gateway_address": [
              {
                "allocation_id": "eipalloc-07777d328697e5524",
                "association_id": "eipassoc-0212e8bf092019673",
                "availability_zone": "eu-west-3b",
                "availability_zone_id": "euw3-az2",
                "public_ip": "35.180.149.118",
                "status": "succeeded"
              },
              {
                "allocation_id": "eipalloc-0c4cda15d9e4239c4",
                "association_id": "eipassoc-02993a59f2f24e88b",
                "availability_zone": "eu-west-3a",
                "availability_zone_id": "euw3-az1",
                "public_ip": "15.236.105.127",
                "status": "succeeded"
              },
              {
                "allocation_id": "eipalloc-0e1ca149e09d7a4f3",
                "association_id": "eipassoc-0a2f5eb3766e4d5b1",
                "availability_zone": "eu-west-3c",
                "availability_zone_id": "euw3-az3",
                "public_ip": "51.44.151.199",
                "status": "succeeded"
              }
            ],
            "regional_nat_gateway_auto_mode": "enabled",
            "route_table_id": "rtb-091e5e4b085c48757",
            "tags": {
              "Name": "nat-gw",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "nat-gw",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "vpc_id": "vpc-0a69937743873a980"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "nat-1e331121dd4186c4f",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:route-table/rtb-0fafcb1130e8f351a",
            "id": "rtb-0fafcb1130e8f351a",
            "owner_id": "247625421810",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-1e331121dd4186c4f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-subs-routing",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "private-subs-routing",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a69937743873a980"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "rtb-0fafcb1130e8f351a",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:route-table/rtb-01b45e5e0981e9a3c",
            "id": "rtb-01b45e5e0981e9a3c",
            "owner_id": "247625421810",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce06f248ac41e0e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-subs-routing",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "public-subs-routing",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a69937743873a980"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "rtb-01b45e5e0981e9a3c",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "controlplane01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046c0ddbb0f434569",
            "region": "eu-west-3",
            "route_table_id": "rtb-0fafcb1130e8f351a",
            "subnet_id": "subnet-0285e5f8c75a7f4c1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "rtbassoc-046c0ddbb0f434569",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.cp",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "controlplane02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034755cc5ac443f8d",
            "region": "eu-west-3",
            "route_table_id": "rtb-0fafcb1130e8f351a",
            "subnet_id": "subnet-0d09632f37e74923c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "rtbassoc-034755cc5ac443f8d",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.cp",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "controlplane03",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0515ea0ed1ddf6933",
            "region": "eu-west-3",
            "route_table_id": "rtb-0fafcb1130e8f351a",
            "subnet_id": "subnet-0fbb670f83cad8170"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "rtbassoc-0515ea0ed1ddf6933",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.cp",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-wk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc520b36c67cf462",
            "region": "eu-west-3",
            "route_table_id": "rtb-0fafcb1130e8f351a",
            "subnet_id": "subnet-0016efa36b4cb4b40"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "rtbassoc-0dc520b36c67cf462",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.worker",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efbdd3862c922471",
            "region": "eu-west-3",
            "route_table_id": "rtb-01b45e5e0981e9a3c",
            "subnet_id": "subnet-0c1faa81a88117e88"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "rtbassoc-0efbdd3862c922471",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.public",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.workstation",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group/sg-0a3b63e4d5b9f192b",
            "description": "Allows controlplane communications.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-06d17256b4bc1baf9"
                ],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0a3b63e4d5b9f192b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-06d17256b4bc1baf9"
                ],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a90077d03260b31b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03768d4486d2bbdd2",
                  "sg-0a90077d03260b31b"
                ],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "controlplane-sg",
            "name_prefix": "",
            "owner_id": "247625421810",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "controlplane-sg",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "controlplane-sg",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a69937743873a980"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sg-0a3b63e4d5b9f192b",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group/sg-07ff846d30b1b2fbc",
            "description": "Allows access from workstation to EFS file share.",
            "egress": [],
            "id": "sg-07ff846d30b1b2fbc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a90077d03260b31b"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "247625421810",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs-sg",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "efs-sg",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a69937743873a980"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sg-07ff846d30b1b2fbc",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group/sg-03768d4486d2bbdd2",
            "description": "Allows communications of controlplane LB.",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3b63e4d5b9f192b"
                ],
                "self": false,
                "to_port": 6443
              }
            ],
            "id": "sg-03768d4486d2bbdd2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-06d17256b4bc1baf9",
                  "sg-0a3b63e4d5b9f192b"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a90077d03260b31b"
                ],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "247625421810",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb-sg",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "lb-sg",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a69937743873a980"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sg-03768d4486d2bbdd2",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group/sg-06d17256b4bc1baf9",
            "description": "Allows worker communications.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d17256b4bc1baf9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a90077d03260b31b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker-sg",
            "name_prefix": "",
            "owner_id": "247625421810",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "worker-sg",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "worker-sg",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a69937743873a980"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sg-06d17256b4bc1baf9",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group/sg-0a90077d03260b31b",
            "description": "Allows workstation communications.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07ff846d30b1b2fbc"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d17256b4bc1baf9",
                  "sg-0a3b63e4d5b9f192b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3b63e4d5b9f192b"
                ],
                "self": false,
                "to_port": 6443
              }
            ],
            "id": "sg-0a90077d03260b31b",
            "ingress": [
              {
                "cidr_blocks": [
                  "88.162.198.72/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "workstation-sg",
            "name_prefix": "",
            "owner_id": "247625421810",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "workstation-sg",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "workstation-sg",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a69937743873a980"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sg-0a90077d03260b31b",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "controlplane01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:subnet/subnet-0285e5f8c75a7f4c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0285e5f8c75a7f4c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247625421810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "controlplane01",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "controlplane01",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "vpc_id": "vpc-0a69937743873a980"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "subnet-0285e5f8c75a7f4c1",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "controlplane02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:subnet/subnet-0d09632f37e74923c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d09632f37e74923c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247625421810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "controlplane02",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "controlplane02",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "vpc_id": "vpc-0a69937743873a980"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "subnet-0d09632f37e74923c",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "controlplane03",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:subnet/subnet-0fbb670f83cad8170",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbb670f83cad8170",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247625421810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "controlplane03",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "controlplane03",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "vpc_id": "vpc-0a69937743873a980"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "subnet-0fbb670f83cad8170",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:subnet/subnet-0016efa36b4cb4b40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0016efa36b4cb4b40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247625421810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "workers",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "workers",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "vpc_id": "vpc-0a69937743873a980"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "subnet-0016efa36b4cb4b40",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:subnet/subnet-0c1faa81a88117e88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1faa81a88117e88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247625421810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "workstation",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "workstation",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "vpc_id": "vpc-0a69937743873a980"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "subnet-0c1faa81a88117e88",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:vpc/vpc-0a69937743873a980",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df1a8aa60e9ba0b8",
            "default_route_table_id": "rtb-0dc99affa2fe5b5ab",
            "default_security_group_id": "sg-0a84b260a3b4378be",
            "dhcp_options_id": "dopt-0629cebb18b90371d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a69937743873a980",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc99affa2fe5b5ab",
            "owner_id": "247625421810",
            "region": "eu-west-3",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "kubernetes",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "vpc-0a69937743873a980",
            "region": "eu-west-3"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_to_cp_wk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-03234f08a0b4919bc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03234f08a0b4919bc",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a3b63e4d5b9f192b",
            "region": "eu-west-3",
            "security_group_id": "sg-0a3b63e4d5b9f192b",
            "security_group_rule_id": "sgr-03234f08a0b4919bc",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-03234f08a0b4919bc",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.cp",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_to_workers_cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-0d1ab49c7a1242cb9",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d1ab49c7a1242cb9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06d17256b4bc1baf9",
            "region": "eu-west-3",
            "security_group_id": "sg-0a3b63e4d5b9f192b",
            "security_group_rule_id": "sgr-0d1ab49c7a1242cb9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-0d1ab49c7a1242cb9",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.cp",
            "module.networking.aws_security_group.wk",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_egress_all_cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-040d0ce087136a17f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-040d0ce087136a17f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0a3b63e4d5b9f192b",
            "security_group_rule_id": "sgr-040d0ce087136a17f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-040d0ce087136a17f",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.cp",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_egress_all_wk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-09729e8791c6499d5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09729e8791c6499d5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-06d17256b4bc1baf9",
            "security_group_rule_id": "sgr-09729e8791c6499d5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-09729e8791c6499d5",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.wk",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_egress_all_workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-0c07e14593fed5202",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c07e14593fed5202",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0a90077d03260b31b",
            "security_group_rule_id": "sgr-0c07e14593fed5202",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-0c07e14593fed5202",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_kube_to_cp_workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-08dac05ff4ea51328",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-08dac05ff4ea51328",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a3b63e4d5b9f192b",
            "region": "eu-west-3",
            "security_group_id": "sg-0a90077d03260b31b",
            "security_group_rule_id": "sgr-08dac05ff4ea51328",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-08dac05ff4ea51328",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.cp",
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_ssh_to_cp_workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-04cba576d8019b6c1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04cba576d8019b6c1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a3b63e4d5b9f192b",
            "region": "eu-west-3",
            "security_group_id": "sg-0a90077d03260b31b",
            "security_group_rule_id": "sgr-04cba576d8019b6c1",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-04cba576d8019b6c1",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.cp",
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_ssh_to_wk_workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-0ac5b0201a2a3544b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ac5b0201a2a3544b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06d17256b4bc1baf9",
            "region": "eu-west-3",
            "security_group_id": "sg-0a90077d03260b31b",
            "security_group_rule_id": "sgr-0ac5b0201a2a3544b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-0ac5b0201a2a3544b",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.wk",
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_workstation_to_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-0facbc2ac4de792ef",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2049,
            "id": "sgr-0facbc2ac4de792ef",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07ff846d30b1b2fbc",
            "region": "eu-west-3",
            "security_group_id": "sg-0a90077d03260b31b",
            "security_group_rule_id": "sgr-0facbc2ac4de792ef",
            "tags": null,
            "tags_all": {},
            "to_port": 2049
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-0facbc2ac4de792ef",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.efs",
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "lbcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-08eedf7b0f736bcc8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-08eedf7b0f736bcc8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a3b63e4d5b9f192b",
            "region": "eu-west-3",
            "security_group_id": "sg-03768d4486d2bbdd2",
            "security_group_rule_id": "sgr-08eedf7b0f736bcc8",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-08eedf7b0f736bcc8",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.cp",
            "module.networking.aws_security_group.lb",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_from_cp_wk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-0ec7feeb574495255",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ec7feeb574495255",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a3b63e4d5b9f192b",
            "region": "eu-west-3",
            "security_group_id": "sg-0a3b63e4d5b9f192b",
            "security_group_rule_id": "sgr-0ec7feeb574495255",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-0ec7feeb574495255",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.cp",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_from_workers_cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-087af7f42adba4a6d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-087af7f42adba4a6d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06d17256b4bc1baf9",
            "region": "eu-west-3",
            "security_group_id": "sg-0a3b63e4d5b9f192b",
            "security_group_rule_id": "sgr-087af7f42adba4a6d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-087af7f42adba4a6d",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.cp",
            "module.networking.aws_security_group.wk",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_health_check_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-019374d24aa5ca6e6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-019374d24aa5ca6e6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03768d4486d2bbdd2",
            "region": "eu-west-3",
            "security_group_id": "sg-0a3b63e4d5b9f192b",
            "security_group_rule_id": "sgr-019374d24aa5ca6e6",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-019374d24aa5ca6e6",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.cp",
            "module.networking.aws_security_group.lb",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_kube_from_workstation_cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-0b4fcaaf6f0918856",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-0b4fcaaf6f0918856",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a90077d03260b31b",
            "region": "eu-west-3",
            "security_group_id": "sg-0a3b63e4d5b9f192b",
            "security_group_rule_id": "sgr-0b4fcaaf6f0918856",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-0b4fcaaf6f0918856",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.cp",
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_mac_workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-0d39af71be3b6661b",
            "cidr_ipv4": "88.162.198.72/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d39af71be3b6661b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0a90077d03260b31b",
            "security_group_rule_id": "sgr-0d39af71be3b6661b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-0d39af71be3b6661b",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_workstation_cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-04baa89d3b78ef59e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04baa89d3b78ef59e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a90077d03260b31b",
            "region": "eu-west-3",
            "security_group_id": "sg-0a3b63e4d5b9f192b",
            "security_group_rule_id": "sgr-04baa89d3b78ef59e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-04baa89d3b78ef59e",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.cp",
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_workstation_wk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-0aee9ee7edf6234f9",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0aee9ee7edf6234f9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a90077d03260b31b",
            "region": "eu-west-3",
            "security_group_id": "sg-06d17256b4bc1baf9",
            "security_group_rule_id": "sgr-0aee9ee7edf6234f9",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-0aee9ee7edf6234f9",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.wk",
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-015752a33ab86b826",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2049,
            "id": "sgr-015752a33ab86b826",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a90077d03260b31b",
            "region": "eu-west-3",
            "security_group_id": "sg-07ff846d30b1b2fbc",
            "security_group_rule_id": "sgr-015752a33ab86b826",
            "tags": null,
            "tags_all": {},
            "to_port": 2049
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-015752a33ab86b826",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.efs",
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "lbcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-090b747ef17e6b62d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-090b747ef17e6b62d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a3b63e4d5b9f192b",
            "region": "eu-west-3",
            "security_group_id": "sg-03768d4486d2bbdd2",
            "security_group_rule_id": "sgr-090b747ef17e6b62d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-090b747ef17e6b62d",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.cp",
            "module.networking.aws_security_group.lb",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "lbworker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-03360b89832ac7acc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03360b89832ac7acc",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06d17256b4bc1baf9",
            "region": "eu-west-3",
            "security_group_id": "sg-03768d4486d2bbdd2",
            "security_group_rule_id": "sgr-03360b89832ac7acc",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-03360b89832ac7acc",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.lb",
            "module.networking.aws_security_group.wk",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "lbworkstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-085a9b96f2eab3af5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-085a9b96f2eab3af5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a90077d03260b31b",
            "region": "eu-west-3",
            "security_group_id": "sg-03768d4486d2bbdd2",
            "security_group_rule_id": "sgr-085a9b96f2eab3af5",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-085a9b96f2eab3af5",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.lb",
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.workstation",
      "mode": "managed",
      "type": "aws_instance",
      "name": "workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04c332520bd9cedb4",
            "arn": "arn:aws:ec2:eu-west-3:247625421810:instance/i-01b6e01599da3b841",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "workstation-profile",
            "id": "i-01b6e01599da3b841",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "workstation",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-07e66c38bbfad7135"
              }
            ],
            "primary_network_interface_id": "eni-07e66c38bbfad7135",
            "private_dns": "ip-10-0-14-241.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.14.241",
            "public_dns": "ec2-35-180-196-192.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.196.192",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ad747e22db456413",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1faa81a88117e88",
            "tags": {
              "Name": "workstation",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "workstation",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a90077d03260b31b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "i-01b6e01599da3b841",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_subnet.workstation",
            "module.networking.aws_vpc.main",
            "module.workstation.aws_iam_instance_profile.workstation",
            "module.workstation.aws_iam_role.workstation",
            "module.workstation.aws_network_interface.workstation",
            "module.workstation.aws_s3_bucket.scripts",
            "module.workstation.aws_secretsmanager_secret.privatekey",
            "module.workstation.aws_secretsmanager_secret.pubkey"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workstation",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:network-interface/eni-07e66c38bbfad7135",
            "id": "eni-07e66c38bbfad7135",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:c3:e5:21:bb:d7",
            "owner_id": "247625421810",
            "private_dns_name": "ip-10-0-14-241.eu-west-3.compute.internal",
            "private_ip": "10.0.14.241",
            "private_ip_list": [
              "10.0.14.241"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.14.241"
            ],
            "private_ips_count": 0,
            "region": "eu-west-3",
            "security_groups": [
              "sg-0a90077d03260b31b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1faa81a88117e88",
            "tags": {
              "Name": "workstation_primary_nic",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            },
            "tags_all": {
              "Name": "workstation_primary_nic",
              "Owner": "Thomas Tuminaro",
              "Project": "tf-k8s-aws"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.workstation",
            "module.networking.aws_subnet.workstation",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}